// Vitest Snapshot v1

exports[`resolve-dependencies 1`] = `
{
  "dependencies": undefined,
  "importers": {
    ".": {
      "dependencies": {
        "tslib": "2.5.0",
      },
      "dependenciesMeta": undefined,
      "publishDirectory": undefined,
      "specifiers": {
        "tslib": "^2.5.0",
      },
    },
  },
  "lockfileVersion": 5.4,
  "packages": {
    "/tslib/2.5.0": {
      "dev": false,
      "resolution": {
        "integrity": "sha512-336iVw3rtn2BUK7ORdIAHTyxHGRIHVReokCR3XjbckJMK7ms8FysBfhLR8IXnAgy7T0PTPNBWKiH514FOW/WSg==",
      },
    },
  },
  "specifiers": undefined,
}
`;

exports[`resolve-dependencies 2`] = `
{
  "importers": {
    ".": {
      "dependencies": {
        "tslib": "2.5.0",
      },
      "dependenciesMeta": undefined,
      "publishDirectory": undefined,
      "specifiers": {
        "tslib": "^2.5.0",
      },
    },
  },
  "lockfileType": "pnpm",
  "lockfileVersion": 1,
  "name": "generic",
  "overrides": undefined,
  "packages": {
    "/tslib/2.5.0": {
      "author": "Microsoft Corp.",
      "cpu": undefined,
      "dependencies": undefined,
      "dev": false,
      "engines": undefined,
      "hasBin": undefined,
      "licenseFile": undefined,
      "optional": undefined,
      "optionalDependencies": undefined,
      "optionalPeerDependencies": [],
      "os": undefined,
      "patched": undefined,
      "peerDependencies": undefined,
      "requiresBuild": undefined,
      "resolution": {
        "integrity": "sha512-336iVw3rtn2BUK7ORdIAHTyxHGRIHVReokCR3XjbckJMK7ms8FysBfhLR8IXnAgy7T0PTPNBWKiH514FOW/WSg==",
      },
      "spdxLicenseId": "0BSD",
      "version": undefined,
    },
  },
  "path": "/home/henry/repos/esm/packages/unlocked/tests/fixtures/generic",
  "version": "1.0.0",
}
`;
